--- a/index.html
+++ b/index.html
@@ -672,9 +672,19 @@ document.querySelectorAll(".tab-link").forEach(btn => {
         doiLink: "https://doi.org/10.5281/zenodo.17075220"
     },
 
+    {
+        type: "Research Article",
+        title: "The Effect of Citric Acid on the Mechanical and Physical Properties of Bioplastics With Various Bases",
+        authors: "Cindy Liang",
+        citation: "STA Journal of Student Research, 2025 1(1), pp. 12-21",
+        published: "Published Online: November 14, 2025",
+        doi: "10.5281/zenodo.17614930",
+        doiLink: "https://doi.org/10.5281/zenodo.17614930"
+
+    },
     // Add more articles here...
 
-];
+    ];
 
 const articlesPerPage = 10;
 let currentPage = 1;
@@ -737,6 +747,16 @@ const archiveData = {
                     published: "Published Online: September 7, 2025",
                     doi: "10.5281/zenodo.17075220",
                     doiLink: "https://doi.org/10.5281/zenodo.17075220"
+                },
+
+                {
+                    type: "Research Article",
+                    title: "The Effect of Citric Acid on the Mechanical and Physical Properties of Bioplastics With Various Bases",
+                    authors: "Cindy Liang",
+                    citation: "STA Journal of Student Research, 2025 1(1), pp. 12-21",
+                    published: "Published Online: November 14, 2025",
+                    doi: "10.5281/zenodo.17614930",
+                    doiLink: "https://doi.org/10.5281/zenodo.17614930"
                 }
                 // Add more articles for this issue here...
             ]
